# rekordbox-organizer

./: .gitignore  MANIFEST.in  Makefile  README.md  README_rekordbox_tool.md  __init__.py  debug_test.py  music_file_scanner.py  pyproject.toml  rekordbox_organizer.py  rekordbox_organizer_fixed.py  requirements.txt  setup.py  test_rekordbox_connection.py  test_update_paths.py
