[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rekordbox-organizer"
version = "1.0.0"
description = "A tool to organize music files based on Rekordbox date added metadata"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "discolotus", email = "tanner.m.leo@gmail.com"}
]
maintainers = [
    {name = "discolotus", email = "tanner.m.leo@gmail.com"}
]
keywords = ["rekordbox", "music", "organizer", "dj", "audio", "files", "metadata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
requires-python = ">=3.8"
dependencies = [
    "pyrekordbox>=0.4.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/discolotus/rekordbox-organizer"
Repository = "https://github.com/discolotus/rekordbox-organizer"
"Bug Reports" = "https://github.com/discolotus/rekordbox-organizer/issues"
Documentation = "https://github.com/discolotus/rekordbox-organizer#readme"

[project.scripts]
rekordbox-organizer = "rekordbox_organizer:main"
music-scanner = "music_file_scanner:main"
test-rekordbox = "test_rekordbox_connection:main"

[tool.setuptools]
py-modules = ["rekordbox_organizer", "music_file_scanner", "test_rekordbox_connection"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox",
]
